# sns-test-task

./: README.md
backend/: .dockerignore  .example.env  .gitignore  Dockerfile  alembic.ini  docker-compose.dev.yaml  makefile  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: de734244babb_initial.py  fe4cd5ed22b5_initial.py
backend/src/: main.py
backend/src/api/v1/: auth.py  events.py  router.py  sse.py  telegram.py  utils.py
backend/src/core/: config.py  exceptions.py  exceptions_mapper.py  ioc.py
backend/src/dto/: __init__.py  base.py  telegram.py  users.py
backend/src/gateways/: contracts.py  exceptions.py
backend/src/gateways/security/: hashing.py  tokens.py
backend/src/gateways/sqlalchemy/repositories/: base.py
backend/src/gateways/sqlalchemy_gateway/: __init__.py  main.py
backend/src/gateways/sqlalchemy_gateway/repositories/: __init__.py  base.py  telegram_acc.py  users.py
backend/src/gateways/sqlalchemy_gateway/repositories/tests/: conftest.py  test_telegram_acc.py  test_users.py
backend/src/gateways/storage/: __init__.py  in_memory.py
backend/src/gateways/tg_client/: factory.py  provider.py  test_provider.py
backend/src/integration_tests/: conftest.py  test_auth.py  test_telegram.py
backend/src/models/: __init__.py  base.py  user.py
backend/src/services/: auth.py  exceptions.py  telegram.py
backend/src/services/tests/: conftest.py  test_auth.py  test_telegram.py
backend/src/tests/services/: test_auth.py  test_telegram.py
frontend/: next.config.ts  package-lock.json  package.json
(+46 files in other folders)
