[project]
name = "sns-notifications-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "AlexeyTarasov77",email = "alexxey2707@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "pytest-asyncio (>=1.0.0,<2.0.0)",
    "faker (>=37.3.0,<38.0.0)",
    "alembic (>=1.16.1,<2.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "psycopg (>=3.2.9,<4.0.0)",
    "punq (>=0.7.0,<0.8.0)",
    "greenlet (>=3.2.2,<4.0.0)",
    "telethon (>=1.40.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.12"
pyright = "^1.1.401"

